--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -20,3 +20,12 @@ jobs:
       uses: actions/setup-go@v4
       with:
         go-version: '1.20'
+    - name: Build
+      run: go build -o ../bin/workshop -v ./...
+      working-directory: workshop-service
+    - name: Upload /bin folder as artifact
+      uses: actions/upload-artifact@v3
+      with:
+        name: workshop
+        path: bin/
+        retention-days: 1
