--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -9,6 +9,11 @@ on:
   pull_request:
     branches: [ "init" ]
 
+env:
+  DOCKER_REPOSITORY: tourna
+  DOCKER_IMAGE: aelm-workshop-23
+  GOLANG_VERSION: 1.21.x
+
 jobs:
 
   build:
@@ -16,10 +21,10 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
-    - name: Set up Go
+    - name: Setup Go ${{ env.GOLANG_VERSION }}
       uses: actions/setup-go@v4
       with:
-        go-version: '1.20'
+        go-version: ${{ env.GOLANG_VERSION }}
     - name: Build
       run: go build -o ../bin/workshop -v ./...
       working-directory: workshop-service
